--- a/back/package.json
+++ b/back/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "nodemon main.js",
+    "start": "node main.js",
     "seed": "node seed.js"
   },
   "dependencies": {
