--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,7 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
       - name: Build and Push Images to DockerHub
         run: |
-          app=Lion-d-Atlas
-          echo "Building and pushing image for $app..."
-          docker build -t "${{ secrets.DOCKERHUB_USERNAME }}/$app:${GITHUB_SHA}" . && \
-          docker push "${{ secrets.DOCKERHUB_USERNAME }}/$app:${GITHUB_SHA}")
+          echo "Building and pushing image for lion-d-atlas..."
+          docker build -t "${{ secrets.DOCKERHUB_USERNAME }}/lion-d-atlas:${GITHUB_SHA}" . && \
+          docker push "${{ secrets.DOCKERHUB_USERNAME }}/lion-d-atlas:${GITHUB_SHA}")
 
