--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   back:
     build:
       context: ./back
+      dockerfile: Dockerfile
       args:
         - BACK_API_PORT=${BACK_API_PORT}
         - BACK_MAIL_FROM=${BACK_MAIL_FROM}
