--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,10 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
       - name: Build and Push Images to DockerHub
         run: |
+      - name: Build and Push Images to DockerHub
+        run: |
           echo "Building and pushing image for lion-d-atlas..."
-          docker build -t "${{ secrets.DOCKERHUB_USERNAME }}/lion-d-atlas:${GITHUB_SHA}" .
-          docker push "${{ secrets.DOCKERHUB_USERNAME }}/lion-d-atlas:${GITHUB_SHA}")
+          docker build -t "${{ secrets.DOCKERHUB_USERNAME }}/lion-d-atlas:${GITHUB_SHA}" -f ./back/Dockerfile ./back
+          docker push "${{ secrets.DOCKERHUB_USERNAME }}/lion-d-atlas:${GITHUB_SHA}"
+
 
