--- a/front/Ycata/package.json
+++ b/front/Ycata/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.1.0",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
