--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,15 @@ services:
       - "${BACK_API_PORT}:${BACK_API_PORT}"
     networks:
       - lion-d-atlas_network
+  front:
+    build:
+      context: ./front
+      dockerfile: Dockerfile
+    ports:
+      - "${FRONT_PORT}:80"
+    restart: always
+    networks:
+      - lion-d-atlas_network
 
 networks:
   lion-d-atlas_network:
