--- a/front/Ycata/package.json
+++ b/front/Ycata/package.json
@@ -20,9 +20,7 @@
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.0.0",
     "leaflet": "^1.9.4",
-    "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -32,12 +30,15 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.16",
+    "autoprefixer": "^10.4.17",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.7.2"
   }
 }
